# MIBC_AI_Subtyping

./: README.md  pyproject.toml  requirements.txt
configs/: encoding.yaml  maps.yaml  predict.yaml
src/: config.py  consensus_class.py  constants.py  he_dataset.py  metrics.py  predict.py  save_maps.py  wsi_visualization.py
src/encode_tiles/: augmentation.py  dataset.py  encode_tiles.py  model.py
src/model/: __init__.py  mibc_model.py  mil.py  model.py
